# nbodyhpc

./: .clang-format  .gitignore  README.md  merge_compile_commands.py
.github/workflows/: python-package.yml
kdtree/: CMakeLists.txt  README.md  pyproject.toml  setup.py
kdtree/src/cpp/: benchmark_build.cpp  benchmark_insertion.cpp  floyd_rivest.hpp  kdtree.cpp  kdtree.hpp  kdtree_asm.S  kdtree_asm_systemv.S  kdtree_asm_systemv.asm  kdtree_asm_windows.asm  kdtree_build_opt.hpp  kdtree_impl.hpp  kdtree_opt.hpp  kdtree_opt_asm.hpp  kdtree_selection.cpp  kdtree_utils.h  kdtree_utils.hpp  main.cpp  pybind.cpp  test.cpp  test_asm.cpp  test_builders.cpp  test_floyd_rivest.cpp  test_inserters.cpp  test_opt.cpp  tournament_tree.hpp  tournament_tree_asm_windows.asm  utils.hpp
kdtree/src/cpp/include/kdtree/: floyd_rivest.hpp  kdtree.hpp  kdtree_build_opt.hpp  kdtree_impl.hpp  kdtree_opt_asm.hpp  kdtree_utils.hpp  position_array.hpp  tournament_tree.hpp
kdtree/src/cpp/tests/: test.cpp  test_asm.cpp  test_builders.cpp  test_floyd_rivest.cpp  test_inserters.cpp  test_opt.cpp
kdtree/src/python/nbodyhpc/kdtree/: __init__.py  _impl.pyi
kdtree/tests/: test_kdtree.py
rasterization/: CMakeLists.txt  README.md  pyproject.toml  setup.py
rasterization/scripts/: install_vulkan_sdk.sh
rasterization/shaders/: triangle.frag  triangle.frag.spv  triangle.frag.spv.h  triangle.vert  triangle.vert.spv  triangle.vert.spv.h
rasterization/src/cpp/: main.cpp  point_renderer.cpp  point_renderer.h  pybind.cpp  shaders.cpp  shaders.h  vertex_utilities.cpp  vertex_utilities.h  vulkan_support.cpp  vulkan_support.h
rasterization/src/python/nbodyhpc/rasterizer/: __init__.py  _impl.pyi
